# GTS_Plugin_Extended

./: CMakeLists.txt  CMakePresets.json  Changelog.txt  README.md  vcpkg.json
src/: Main.cpp
src/data/: plugin.hpp
src/managers/damage/: LaunchObject.cpp
src/rays/: allcollector.cpp  raycast.cpp
src/utils/: actorUtils.cpp  actorUtils.hpp  fmt.hpp
